# nbQA

./: .all-contributorsrc  .coverage.marco-ThinkPad-T430.6447.188359  .coverage.marco-ThinkPad-T430.6454.206592  .coverage.marco-ThinkPad-T430.6482.882089  .coverage.marco-ThinkPad-T430.6489.465104  .coverage.marco-ThinkPad-T430.6492.573549  .coverage.marco-ThinkPad-T430.6493.149069  .coverage.marco-ThinkPad-T430.6519.845760  .coveragerc  .darglint  .gitignore  .pre-commit-config.yaml  .pre-commit-hook.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  default_config.toml  f.py  mypy.ini  push-to-mirrors.sh  pyproject.toml  pytest.ini  readthedocs.yml  remove_comments.py  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: autoupdate-pre-commit-config.yml  dispatch_pre-commit.yml  docs.yml  main.yml  pre-commit.yml  publish_to_pypi.yml  pylint.yml  slash_dispatch.yml  tox.yml
docs/: Makefile  authors.rst  clean_build_artifacts.py  conf.py  configuration.rst  contributing.rst  examples.rst  history.rst  index.rst  installation.rst  known-limitations.rst  make.bat  modules.rst  pre-commit.rst  readme.md  requirements-docs.txt  tutorial.rst  usage.rst
nbqa/: __init__.py  __main__.py  cmdline.py  config.py  config_parser.py  find_root.py  handle_magics.py  notebook_info.py  optional.py  output_parser.py  path_utils.py  put_magics_back_in.py  replace_code_source.py  replace_magics.py  replace_source.py  save_code_source.py  save_markdown_source.py  save_source.py  text.py  toml_parser.py  troubleshoot.py  util.py
nbqa/config/: __init__.py  config.py  default_config.py  default_config.toml
tests/: conftest.py  local_script.py  print_6174.py  remove_all.py  remove_comments.py  test_allow_mutation.py  test_black.py  test_cmdline.py  test_configs_work.py  test_create_blank_init_files.py  test_deprecated.py  test_doctest.py  test_file_not_found.py  test_find_root.py  test_flake8_works.py  test_get_notebooks.py  test_hash_collision.py  test_include_exclude.py  test_indented_magics.py  test_ipython_magics.py  test_isort_works.py  test_jupytext.py  test_last_line.py  test_local_script.py  test_map_python_line_to_nb_lines.py  test_mcve.py  test_missing_command.py  test_missing_root_dir.py  test_mypy_works.py  test_nbqa_diff.py  test_nbqa_ini.py  test_nbqa_shell.py  test_no_inits.py  test_non_python_notebook.py  test_other_magics.py  test_pylint_works.py  test_pyproject_toml.py  test_pyupgrade.py  test_return_code.py  test_running_from_different_dir.py  (+8 more)
tests/data/: __init__.py  all_magic_cell.ipynb  clean_notebook.ipynb  clean_notebook_with_multiline.ipynb  clean_notebook_with_trailing_semicolon.ipynb  comment_after_trailing_semicolon.ipynb  commented_out_magic.ipynb  databricks_notebook.ipynb  default_magic.ipynb  empty_notebook.ipynb  env_var.ipynb  footer.ipynb  invalid_import_in_doctest.ipynb  markdown_then_imports.ipynb  non_default_magic.ipynb  notebook_for_autoflake.ipynb  notebook_for_testing.ipynb  notebook_for_testing.md  notebook_for_testing.qmd  notebook_for_testing_copy.ipynb  notebook_for_testing_copy.md  notebook_starting_with_md.ipynb  notebook_with_cell_after_def.ipynb  notebook_with_indented_magics.ipynb  notebook_with_local_import.ipynb  notebook_with_other_magics.ipynb  notebook_with_separated_imports.ipynb  notebook_with_separated_imports_other.ipynb  notebook_with_trailing_semicolon.ipynb  notebook_with_unsorted_imports.ipynb  percent_format.ipynb  simple_imports.ipynb  starting_with_comment.ipynb  t.ipynb  t.py  test_isort_works.py  test_notebook.ipynb  transformed_magics.ipynb
tests/invalid_data/: assignment_to_literal.ipynb  automagic.ipynb  invalid_syntax.ipynb  tracker.md  (+1 more)
(+19 files in other folders)
