[metadata]
name = nbqa
version = attr: nbqa.__version__
description = Run any standard Python code quality tool on a Jupyter Notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nbQA-dev/nbQA
author = Marco Gorelli, Girish Pasupathy, Sebastian Weigand
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Jupyter
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Quality Assurance
keywords = jupyter, notebook, format, lint
project_urls =
    Documentation = https://nbQA.readthedocs.io/en/latest/
    Source = https://github.com/nbQA-dev/nbQA
    Tracker = https://github.com/nbQA-dev/nbQA/issues

[options]
packages = find:
py_modules = nbqa
install_requires =
    toml
    importlib_metadata;python_version < '3.8'
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    nbqa = nbqa.__main__:main

[options.package_data]
nbqa =
    config/default_config.toml

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[flake8]
ignore = E203,E503,W503,W504
max-line-length = 120
exclude = venv,.*

[darglint]
ignore = DAR101,DAR103,DAR201,DAR301
docstring_style = numpy

[pydocstyle]
add-ignore = D104

[mypy]
disallow_untyped_defs = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-_pytest.capture]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[mypy-setup]
ignore_errors = True

[mypy-conf]
ignore_errors = True
