[metadata]
name = nbqa
version = attr: nbqa.__version__
description = Run any standard Python code quality tool on a Jupyter Notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nbQA-dev/nbQA
author = Marco Gorelli, Girish Pasupathy, Sebastian Weigand
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Jupyter
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
keywords = jupyter, notebook, format, lint
project_urls =
    Documentation = https://nbQA.readthedocs.io/en/latest/
    Source = https://github.com/nbQA-dev/nbQA
    Tracker = https://github.com/nbQA-dev/nbQA/issues

[options]
packages = find:
py_modules = nbqa
install_requires =
    autopep8>=1.5
    ipython>=7.8.0
    tokenize-rt>=3.2.0
    tomli
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    nbqa = nbqa.__main__:main

[options.extras_require]
toolchain =
    black
    blacken-docs
    flake8
    isort
    jupytext
    mypy
    pylint
    pyupgrade
    ruff

[flake8]
extend-ignore = E203,E503
max-line-length = 120
exclude = venv,.*

[darglint]
ignore = DAR101,DAR103,DAR201,DAR301
docstring_style = numpy

[pydocstyle]
add-ignore = D104

[mypy]
strict = True
allow_untyped_decorators = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-_pytest.capture]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[mypy-setup]
ignore_errors = True

[mypy-conf]
ignore_errors = True
